# obsidian_vault

./: .directory  .gitignore  .gitmodules  .ignore_config.json  .nomedia  .stignore  BACKUP_markor_20240531-134123.json  BACKUP_markor_20240531-134143.json  CodeIdeas.md  Home.md  Outline.md  README.md  Random.md  Reference.md  Scheduler.md  Scheduler.md.orig  conflict-files-obsidian-git.md  random_notes.md  update_ignore.py
.obsidian/: app.json  appearance.json  backlink.json  bookmarks.json  community-plugins.json  core-plugins-migration.json  core-plugins.json  graph.json  hotkeys.json  workspace-mobile.json  workspace.json
.obsidian/snippets/: 8 + 8 highlight colors.css  Combine Nested tag colors and Highlight colors .css  asciidoctor.css  banner-fix.css  better-export-pdf.css  big-math.css  custom-admonitions.b75f10.css  custom_callouts.css  dialogs.css  export_fix.css  fix_highligh.css  home.css  kanban.css  list_padding.css  mermaid.css  (+6 more)
.stfolder/: syncthing-folder-ffff7c.txt
Excalidraw/: Drawing 2024-10-27 13.04.15.excalidraw.md
Films_etc/: ToWatch.md  Watched.md
cpp-labs/: .clang-format  .editorconfig  .gitignore  genericFunctions.h
cpp-labs-import/: .gitignore  compile_all.sh  formulas.txt  genericFunctions.h  hashes.txt  hashes_old.txt  math parser.cpp  math parser.sln  math parser.vcxproj  math-parser  math-parser.cpp  math-parser.vcxproj  math-parser.vcxproj.filters  test  test.cpp
templates/: paste
uni/: Index.md
uni/Process automation/labs/lab3/bot/: api_client.py  bot.py  config.py  env.sample  pyproject.toml
web-labs/: README.md
(+1321 files in other folders)
